# XINYU

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: .env.example  __init__.py  alembic.ini  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: colleges.py  config.py  crisis_keywords.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/dependencies/: __init__.py  auth.py  services.py
backend/app/models/: __init__.py  alert_event.py  chat_message.py  chat_session.py  conversation_summary.py  counselor_account.py  enums.py  message_analysis.py  (+2 more)
backend/migrations/: env.py  seed_resources.sql
backend/tests/: conftest.py
data/: annotation-reconciliation.md  annotation-spec.md  corpus_check.txt  crisis_probe.jsonl  full_quality_audit.txt  quality_check.txt  quality_issues.txt  reasoning_leakage.txt  repetition_report.txt  test_audit.txt  tier2_sentences.txt
data/scripts/: annotate_test_candidates.py  convert_public_dataset.py  fix_test_labels.py  generate_balanced_test.py  generate_claude_supplement.py  generate_crisis_supplement.py  generate_synthetic_data.py  generate_targeted_supplement.py  review_test_annotations.py
docs/: backend-presentation.md  presentation-script.md
docs/experiment-results/: nlp_comparison.md
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  auth.ts  constants.ts  index.css  types.ts
nlp/: requirements.txt
nlp/eval/: compare_models.py  compute_iaa.py  evaluate.py
nlp/train/: data_utils.py  model.py  train_multitask.py
(+53 files in other folders)
