[project]
name = "xinyu"
version = "0.1.0"
description = "XinYu — mental health emotional-support chat assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.34,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.8,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "openai>=1.0,<2.0",
    "sse-starlette>=1.6,<2.0",
    "bcrypt>=4.0,<6.0",
    "PyJWT>=2.10,<3.0",
    "openpyxl>=3.1,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]
nlp = [
    "torch>=2.1,<3.0",
    "transformers>=4.40,<5.0",
    "datasets>=2.19,<3.0",
    "scikit-learn>=1.4,<2.0",
    "evaluate>=0.4,<1.0",
    "accelerate>=0.29,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.uv]
# This project is not a distributable package — uv manages deps only.
package = false
